--- a/index.qmd
+++ b/index.qmd
@@ -20,7 +20,7 @@ This page contains an outline of the topics, content, and assignments for the qu
 +---------+--------------+--------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
 | 3       | Friday, 2/7  | [Intro to Version Control](weeks/week-3-version-control.qmd) | [Expert Designer](group-activities/week-2/expert-designer.qmd)                                                                    |
 |         |              |                                                              |                                                                                                                                   |
-|         |              |                                                              | Pair Activity 2: Secret Code Revisited                                                                                            |
+|         |              |                                                              | [Pair Activity 2: Secret Code Revisited](group-activities/week-3/pa2-vc-instructions.qmd)                                         |
 +---------+--------------+--------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
 | 4       | Friday, 2/14 | [Intro to Data Visualization](weeks/week-4-ggplot.qmd)       |                                                                                                                                   |
 +---------+--------------+--------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
