--- a/group-activities/week-3/pa2-base-r-vc.qmd
+++ b/group-activities/week-3/pa2-base-r-vc.qmd
@@ -1,7 +1,7 @@
 ---
-title: "Practice Activity 1: Find the Mistakes"
-format: html
-editor: visual
+title: "Practice Activity 2: Break the Code"
+format: gfm
+editor: source
 execute: 
   echo: true
   eval: false
@@ -16,12 +16,6 @@ library(tidyverse)
 Today you will be creating and manipulating vectors, lists, and data frames to uncover a top secret message.
 
 ***This task is complex. It requires many different types of abilities. Everyone will be good at some of these abilities but nobody will be good at all of them. In order to solve this puzzle, you will need to use the skills of each member of your group.***
-
-Some advice:
-
--   Google can be your friend! If an error is confusing, copy it into Google and see what other people are saying. BUT only Google if you and your partner cannot determine the solution. Google is the last resort.
-
--   Just because there is no error message doesn't mean everything went smoothly! Use the **console** (lower left pane) to check each step and make sure you have accomplished what you wanted to accomplish.
 
 ## Groupwork Protocols
 
@@ -41,30 +35,36 @@ Remember, your group is expected to adhere to the following norms:
 
 ## Part Zero: Accessing the Practice Activity
 
-<!-- This is a Quarto Comment - if you highlight any markdown text and pre CTRL+Shift+C it will make it a comment which can only be seen in the un-rendered Quarto document-->
+<!-- This is a Quarto Comment - if you highlight any markdown text and press CTRL+Shift+C it will make it a comment which can only be seen in the un-rendered Quarto document-->
 
 To access the activity and get it ready to share:
 
-1.  Log into your [CSUMB R Server Account](https://rstudio.otterstat.org/).\
-2.  Choose one partner (with the closest upcoming birthday) to create an R Project called "pa-1-intro-quarto".\
-3.  Upload the `pa1-base-r.qmd` into the project folder.\
-4.  Share the project with the other partner, go to File \> Share Project \> Type partner's username \> Click Add
+1.  The Developer (partner with first name alphabetically) should create a GitHub repo called "pa-2-code-breaking".  
+2. To the description add "Peer Activity 2 with NAME1 and NAME 2" and check to add a README file and Create the Repository.  
+3. Under Settings, go to Collaborators, the Add people and search for your partner by username or email.  
+4. The partner should then log into GitHub and accept the invitation. Now you both should be able to push/pull to the same repository.  
+5. The Developer should then create a Version Control R Project on their computer and then download the PA2 .qmd file into the folder.  
+6. Test you connection by staging, committing, and pushing the new files (.Rproj and .qmd) to the GitHub Repository.  
 
-<!-- Partner with the closest upcoming birthday starts as the... -->
+Now you are ready to start!
 
+<!-- Partner with the first name alphabetically starts as the... -->
 <!-- Developer (typing and listening to instructions from the Coder!) -->
+
+**For each code chunk, add a `#| label:` and a `#comment` describing what the code chunk is doing. Be sure to check that all spacing is appropriate as well!**
 
 ## Part One: Setup
 
-Each of the following R chunks will cause an error and / or do the desired task incorrectly. Find the mistake, and correct it to complete the intended action.
+Each of the following R chunks will cause an error and / or do the desired task incorrectly. The correct code is on the PA2 Activity on the webpage, please copy the correct code into each code chunk and add a label and comment.  
 
-1.  Create vectors containing the upper case letters, lower case letters, and some punctuation marks.
+1.  Create vectors containing the upper case letters, lower case letters, and some punctuation marks. add a label that indicate this code chunk creates the vectors of letters and punctuation.
 
 ```{r}
+
 lower_case <- c("a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k", "l", "m",
                 "n", "o", "p", "q", "r", "s", "t", "u", "v", "w", "x", "y", "z")
 
-upper_case <- c("A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M",
+upper_case <- c("A", "B", "C", "D", "E", "F", "G", "H" "I", "J", "K", "L", "M",
                 "N", "O", "P", "Q", "R", "S", "T", "U", "V", "W", "X", "Y", "Z")
 
 punctuation <- c(".", ",", "!", "?", "'", '"', "(", ")", " ", "-", ";", ":")
@@ -74,33 +74,37 @@ punctuation <- c(".", ",", "!", "?", "'", '"', "(", ")", " ", "-", ";", ":")
 2.  Make **one** long **vector** containing all the symbols.
 
 ```{r}
-my_symbols <- c(lower_case, upper_case, punctuation)
+my_symbols <- (lower_case, upper_case, punctuation)
 ```
 
 3.  Turn the `my_symbols` vector into a data frame, with one column named "symbol".
 
 ```{r}
-my_symbols <- data.frame(symbol = my_symbols)
+my_symbols <- dataframe(symbol = my_symbols)
 ```
 
 4.  Find the total number of symbols we have in our data frame.
 
 ```{r}
-len <- length(my_symbols$symbol)
+len <- length(my_Symbols)
 ```
 
 5.  Create a new variable in your dataframe that assigns a number to each symbol.
 
 ```{r}
-my_symbols$num <- 1:len
+my_symbols%Num <- 1:len
 ```
+
+<!-- Developer Stage your Changes, Commit, and Push to the Git Repository-->
+<!-- Now change roles (Developer becomes Coder) --> 
+<!-- The new Developer should PULL down the repository to make changes on their computer -->
 
 ## Part Two: Decoding the secret message.
 
 This chunk will load up the encoded secret message as a vector:
 
 ```{r}
-library(readr)
+
 top_secret <- read_csv("https://www.dropbox.com/s/k72h1zewk4gtqep/PA_Secret_Code?dl=1", 
                        col_names = FALSE)$X1
 
@@ -110,26 +114,30 @@ By altering this top secret set of numbers, you will be able to create a message
 
 6.  Add 14 to every number.
 
+```{r}
+
+ts6 <- top_secret ___________
+
+```
+
 7.  Multiply every number by 18, then subtract 257.
+
+```{r}
+
+ts7 <- ts6___________
+
+```
 
 8.  Use the `exp()` function to exponentiate every number.
 
+```{r}
+ts8 <- ____(ts7)
+```
+
 9.  Square every number.
 
-**Hint:** To update a vector after performing an operation, you *overwrite* the existing object with its updated counterpart. This looks something like this:
-
-`x <- x + 12`,
-
-where the original value(s) in `x` have had 12 added to them, and the resulting values are put back in to the object named `x`.
-
 ```{r}
-## Code to carry out steps 6-9 
-
-ts6 <- top_secret + 14
-ts7 <- ts6*18 - 257
-ts8 <- exp(ts7)
-ts9 <- ts8^2
-
+ts9 <- 
 ```
 
 **Checkpoint:** Headquarters has informed you that at this stage of decoding, there should be 352 numbers in the secret message that are below 17. Write the code to verify that this is true for your `top_secret` object!
@@ -138,34 +146,57 @@ ts9 <- ts8^2
 
 ```{r}
 # Write code to verify that there are 352 numbers with values **below** 17
-sum(ts9 < 17)
+
+___(ts9 < 17)
 
 ```
+
+<!-- Developer Stage your Changes, Commit, and Push to the Git Repository-->
+<!-- Now change roles (Developer becomes Coder) --> 
+<!-- The new Developer should PULL down the repository to make changes on their computer -->
+
+**Hint:** To update an object after performing an operation, you *overwrite* the existing object with its updated counterpart. This looks something like this:
+
+`x <- x + 12`,
+
+where the original value(s) in `x` have had 12 added to them, and the resulting values are put back in to the object named `x`. Be careful with this - if you do something wrong you will need to rerun the previous code chunks to reset everything! Fortunately, the grey arrow pointing down to the green line in each code chunk runs all previous code chunks again.
 
 Next, carry out the following steps:
 
 10. Turn your vector of numbers into a matrix with 5 columns.
 
+```{r}
+ts_mat <- _____(ts9, ncol = ____) 
+```
+
 11. Separately from your top secret numbers, create a vector of all the even numbers between 1 and 382. Name it "evens". That is, "evens" should contain 2, 4, 6, 8 ..., 382.
+
+```{r}
+evens <- seq(from = __ , to = __ , by = __)
+```
 
 12. Subtract the "evens" vector from the first column of your secret message matrix.
 
+```{r}
+ts_mat[, 1] <- ts_mat[, ___] - evens
+```
+
 13. Subtract 100 from all numbers 18-24th rows of the 3rd column.
 
+```{r}
+ts_mat[18:24, 3] <- ts_mat[____, ____] - ____
+```
+
 14. Multiply all numbers in the 4th and 5th column by 2.
+
+```{r}
+ts_mat[, __:__] <- 
+```
 
 15. Turn your matrix back into a vector.
 
 ```{r}
-## Code to carry out steps 10-15
-
-ts_mat <- matrix(ts9, ncol = 5)
-evens <- seq(2,382, by = 2)
-ts_mat[,1] <- ts_mat[,1] - evens
-ts_mat[18:24, 3] <- ts_mat[18:24, 3] - 100
-ts_mat[, 4:5] <- ts_mat[, 4:5]*2
-ts_vec <- as.vector(ts_mat)
-
+ts_vec <- ________(ts_mat)
 ```
 
 **Checkpoint:** Headquarters has informed you that at this stage of decoding, all numbers in indices 500 and beyond are below 100. Write the code to verify that this is true for your `top_secret` object!
@@ -174,23 +205,29 @@ ts_vec <- as.vector(ts_mat)
 
 ```{r}
 # Write code to verify that indices 500 and beyond have values **below** 100
-sum(ts_vec[500:955] >= 100)
-
+___(ts_vec[____:____] >= ____)
 ```
+
+<!-- Developer Stage your Changes, Commit, and Push to the Git Repository-->
+<!-- Now change roles (Developer becomes Coder) --> 
+<!-- The new Developer should PULL down the repository to make changes on their computer -->
 
 16. Take the square root of all numbers in indices 38 to 465.
 
+```{r}
+ts_vec[___:___] <- ____(ts_vec[38:465])
+```
+
 17. Use the `round()` function to round all numbers to the nearest whole number.
 
-18. Replace all instances of the number 39 with 20.
+```{r}
+ts_vec <- 
+```
 
-*Hint:* Step 18 requires another relational comparison, but this time it is equality. Equality in R is checked with a double equal sign rather than a single equal sign!
+18. Replace all instances of the number 39 with 20. *Hint:* Step 18 requires another relational comparison, but this time it is equality. Equality in R is checked with a double equal sign rather than a single equal sign
 
 ```{r}
-# Code for steps 16-18
-ts_vec[38:465] <- sqrt(ts_vec[38:465])
-ts_vec <- round(ts_vec)
-ts_vec[ts_vec == 39] <- 20
+ts_vec[ts_vec == ___ ] <- 
 ```
 
 **Checkpoint:** Headquarters has informed you that your final message should have 344 even numbers.
@@ -200,18 +237,24 @@ ts_vec[ts_vec == 39] <- 20
 ```{r}
 # Code to verify how many even numbers are in your top_secret vector
 
-sum(ts_vec %% 2 == 0)
-
-
+___(ts_vec %% 2 == 0)
 
 ```
+
+<!-- Developer Stage your Changes, Commit, and Push to the Git Repository-->
+<!-- Now change roles (Developer becomes Coder) --> 
+<!-- The new Developer should PULL down the repository to make changes on their computer -->
 
 ## Part 3: The secret message!
 
 Use your final vector of numbers as indices for my_symbols to discover the final message, by running the following code:
 
-```{r, eval = FALSE}
+```{r}
 stringr::str_c(my_symbols$symbol[ts_vec], collapse = "")
 ```
 
 Google the first line of this message, if you do not recognize it, to see what poem it is.
+
+## Part 4: Wrap up
+
+The last step is to make each code chunk hidden, even though it runs by modifying the YAML. Once knit to markdown format for viewing on GitHub, push all the final changes and rendered .md to the repository and submit your repository with your "quiz" for the week. Note that each person should be submit a link.
