--- a/index.qmd
+++ b/index.qmd
@@ -24,3 +24,5 @@ This page contains an outline of the topics, content, and assignments for the qu
 +---------+--------------+--------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
 | 4       | Friday, 2/14 | [Intro to Data Visualization](weeks/week-4-ggplot.qmd)       |                                                                                                                                   |
 +---------+--------------+--------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
+| 5       | Friday, 2/21 | [Importing Data](weeks/week-5-projects-data-import.qmd)      |                                                                                                                                   |
++---------+--------------+--------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
